Fix text wrapping in comments

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -711,6 +711,7 @@
         .content {
             overflow-wrap: break-word;
             word-wrap: break-word;
+            hyphens: auto;
         }
     }
     .avatar {
